--- a/index.html
+++ b/index.html
@@ -10,6 +10,36 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <section class="header-nav flex-between flex-row">
+                <div class="logo">logo</div>
+                <nav class="navbar">
+                    <i class="fa-solid fa-bars"></i>
+                </nav>
+            </section>
+        </div>
+    </header>
+    <main>
+        <div class="container">
+            <section class="cards flex-column">
+                <div class="card principal">
+                    Lorem, ipsum dolor.
+                </div>
+                <div class="card">
+                    Lorem, ipsum dolor.
+                </div>
+                <div class="card">
+                    Lorem, ipsum dolor.
+                </div>
+                <div class="card">
+                    Lorem, ipsum dolor.
+                </div>
+                <div class="card">
+                    Lorem, ipsum dolor.
+                </div>
+            </section>
+        </div>
+    </main>
 </body>
 </html>
