finished mobile structure

--- a/index.html
+++ b/index.html
@@ -39,7 +39,68 @@
                     Lorem, ipsum dolor.
                 </div>
             </section>
+            <section class="plannings flex-column violetc">
+                <div class="left-planning planning">
+                    Lorem, ipsum dolor.
+                </div>
+                <div class="right-planning planning">
+                    Lorem, ipsum dolor.
+                </div>
+            </section>
+            <section class="testimonials flex-column">
+                <div class="testimonial violetc">
+                    Lorem, ipsum dolor.
+                </div>
+                <div class="testimonial violetc">
+                    Lorem, ipsum dolor.
+                </div>
+                <div class="testimonial violetc">
+                    Lorem, ipsum dolor.
+                </div>
+            </section>
+            <section class="benefits violetc">
+                <div class="benefit-card">
+                    Lorem ipsum dolor sit amet.
+                </div>
+                <div class="benefit-card">
+                    Lorem ipsum dolor sit amet.
+                </div>                
+                <div class="benefit-card">
+                    Lorem ipsum dolor sit amet.
+                </div>
+                <div class="benefit-card">
+                    Lorem ipsum dolor sit amet.
+                </div>
+                <div class="benefit-card">
+                    Lorem ipsum dolor sit amet.
+                </div>
+                <div class="benefit-card">
+                    Lorem ipsum dolor sit amet.
+                </div>
+            </section>
+            <section class="about-us">
+                <h2>title</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae culpa beatae officiis ipsum omnis libero mollitia modi error, alias aperiam eaque saepe nulla quod cum quis deserunt recusandae nemo fugiat!</p>
+                <p>img</p>
+                <h5>title</h5>
+                <button>findme</button>
+            </section>
+            <section class="started violetc">
+                <p>get start</p>
+                <h5>Simple</h5>
+                <h1>free!</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis provident nostrum distinctio suscipit adipisci ex accusamus placeat, fugit et aperiam est, laudantium similique ipsam necessitatibus eaque voluptates deserunt, dolor laboriosam.</p>
+                <button>getstart</button>
+                <p class="copyright">copyright</p>
+            </section>
         </div>
     </main>
+    <footer>
+        <div class="container">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis modi, rem id eligendi, quia nam sunt officiis mollitia, impedit ad labore eius consequatur vitae suscipit amet ab illo quas itaque?</p>
+            <a href="#">Lorem</a><span>Lorem, ipsum dolor.<a href="#">boolean</a>
+            </span>
+        </div>
+    </footer>
 </body>
 </html>
