--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <div class="container">
-            <section class="cards flex-column">
+            <section class="cards flex">
                 <div class="card principal">
                     Lorem, ipsum dolor.
                 </div>
@@ -39,7 +39,7 @@
                     Lorem, ipsum dolor.
                 </div>
             </section>
-            <section class="plannings flex-column violetc">
+            <section class="plannings flex violet-bg">
                 <div class="left-planning planning">
                     Lorem, ipsum dolor.
                 </div>
@@ -47,18 +47,18 @@
                     Lorem, ipsum dolor.
                 </div>
             </section>
-            <section class="testimonials flex-column">
-                <div class="testimonial violetc">
+            <section class="testimonials flex">
+                <div class="testimonial violet-bg">
                     Lorem, ipsum dolor.
                 </div>
-                <div class="testimonial violetc">
+                <div class="testimonial violet-bg">
                     Lorem, ipsum dolor.
                 </div>
-                <div class="testimonial violetc">
+                <div class="testimonial violet-bg">
                     Lorem, ipsum dolor.
                 </div>
             </section>
-            <section class="benefits violetc">
+            <section class="benefits flex violet-bg">
                 <div class="benefit-card">
                     Lorem ipsum dolor sit amet.
                 </div>
@@ -78,14 +78,18 @@
                     Lorem ipsum dolor sit amet.
                 </div>
             </section>
-            <section class="about-us">
-                <h2>title</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae culpa beatae officiis ipsum omnis libero mollitia modi error, alias aperiam eaque saepe nulla quod cum quis deserunt recusandae nemo fugiat!</p>
-                <p>img</p>
-                <h5>title</h5>
-                <button>findme</button>
+            <section class="about-us flex">
+                <div class="about-title">
+                    <h2>title</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae culpa beatae officiis ipsum omnis libero mollitia modi error, alias aperiam eaque saepe nulla quod cum quis deserunt recusandae nemo fugiat!</p>
+                </div>
+                <div class="about-img">
+                    <p>img</p>
+                    <h5>title</h5>
+                    <button>findme</button>
+                </div>
             </section>
-            <section class="started violetc">
+            <section class="started violet-bg">
                 <p>get start</p>
                 <h5>Simple</h5>
                 <h1>free!</h1>
