finished desktop structure

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="container">
-            <section class="header-nav flex-between flex-row">
+            <section class="header-nav flex-between flex">
                 <div class="logo">logo</div>
                 <nav class="navbar">
                     <i class="fa-solid fa-bars"></i>
@@ -21,86 +21,96 @@
         </div>
     </header>
     <main>
-        <div class="container">
-            <section class="cards flex">
-                <div class="card principal">
-                    Lorem, ipsum dolor.
-                </div>
-                <div class="card">
-                    Lorem, ipsum dolor.
-                </div>
-                <div class="card">
-                    Lorem, ipsum dolor.
-                </div>
-                <div class="card">
-                    Lorem, ipsum dolor.
-                </div>
-                <div class="card">
-                    Lorem, ipsum dolor.
-                </div>
-            </section>
-            <section class="plannings flex violet-bg">
-                <div class="left-planning planning">
-                    Lorem, ipsum dolor.
-                </div>
-                <div class="right-planning planning">
-                    Lorem, ipsum dolor.
+            <section class="cards">
+                <div class="container flex">
+                    <div class="card principal">
+                        Lorem, ipsum dolor.
+                    </div>
+                    <div class="card">
+                        Lorem, ipsum dolor.
+                    </div>
+                    <div class="card">
+                        Lorem, ipsum dolor.
+                    </div>
+                    <div class="card">
+                        Lorem, ipsum dolor.
+                    </div>
+                    <div class="card">
+                        Lorem, ipsum dolor.
+                    </div>
                 </div>
             </section>
-            <section class="testimonials flex">
-                <div class="testimonial violet-bg">
-                    Lorem, ipsum dolor.
-                </div>
-                <div class="testimonial violet-bg">
-                    Lorem, ipsum dolor.
-                </div>
-                <div class="testimonial violet-bg">
-                    Lorem, ipsum dolor.
-                </div>
-            </section>
-            <section class="benefits flex violet-bg">
-                <div class="benefit-card">
-                    Lorem ipsum dolor sit amet.
-                </div>
-                <div class="benefit-card">
-                    Lorem ipsum dolor sit amet.
-                </div>                
-                <div class="benefit-card">
-                    Lorem ipsum dolor sit amet.
-                </div>
-                <div class="benefit-card">
-                    Lorem ipsum dolor sit amet.
-                </div>
-                <div class="benefit-card">
-                    Lorem ipsum dolor sit amet.
-                </div>
-                <div class="benefit-card">
-                    Lorem ipsum dolor sit amet.
+            <section class="plannings violet-bg">
+                <div class="container flex">
+                    <div class="left-planning planning">
+                        Lorem, ipsum dolor.
+                    </div>
+                    <div class="right-planning planning">
+                        Lorem, ipsum dolor.
+                    </div>
                 </div>
             </section>
-            <section class="about-us flex">
-                <div class="about-title">
-                    <h2>title</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae culpa beatae officiis ipsum omnis libero mollitia modi error, alias aperiam eaque saepe nulla quod cum quis deserunt recusandae nemo fugiat!</p>
+            <section class="testimonials">
+                <div class="container flex">
+                    <div class="testimonial violet-bg">
+                        Lorem, ipsum dolor.
+                    </div>
+                    <div class="testimonial violet-bg">
+                        Lorem, ipsum dolor.
+                    </div>
+                    <div class="testimonial violet-bg">
+                        Lorem, ipsum dolor.
+                    </div>
                 </div>
-                <div class="about-img">
-                    <p>img</p>
-                    <h5>title</h5>
-                    <button>findme</button>
+            </section>
+            <section class="benefits violet-bg">
+                <div class="container flex">
+                    <div class="benefit-card">
+                        Lorem ipsum dolor sit amet.
+                    </div>
+                    <div class="benefit-card">
+                        Lorem ipsum dolor sit amet.
+                    </div>                
+                    <div class="benefit-card">
+                        Lorem ipsum dolor sit amet.
+                    </div>
+                    <div class="benefit-card">
+                        Lorem ipsum dolor sit amet.
+                    </div>
+                    <div class="benefit-card">
+                        Lorem ipsum dolor sit amet.
+                    </div>
+                    <div class="benefit-card">
+                        Lorem ipsum dolor sit amet.
+                    </div>
+                </div>
+            </section>
+            <section class="about-us">
+                <div class="container flex">
+                    <div class="about-title">
+                        <h2>title</h2>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae culpa beatae officiis ipsum omnis libero mollitia modi error, alias aperiam eaque saepe nulla quod cum quis deserunt recusandae nemo fugiat!</p>
+                    </div>
+                    <div class="about-img">
+                        <p>img</p>
+                        <h5>title</h5>
+                        <button>findme</button>
+                    </div>
                 </div>
             </section>
             <section class="started violet-bg">
-                <p>get start</p>
-                <h5>Simple</h5>
-                <h1>free!</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis provident nostrum distinctio suscipit adipisci ex accusamus placeat, fugit et aperiam est, laudantium similique ipsam necessitatibus eaque voluptates deserunt, dolor laboriosam.</p>
-                <button>getstart</button>
-                <p class="copyright">copyright</p>
+                <div class="container flex">
+                    <p>get start</p>
+                    <h5>Simple</h5>
+                    <h1>free!</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis provident nostrum distinctio suscipit adipisci ex accusamus placeat, fugit et aperiam est, laudantium similique ipsam necessitatibus eaque voluptates deserunt, dolor laboriosam.</p>
+                    <button>getstart</button>
+                    <p class="copyright">copyright</p>
+                </div>
             </section>
-        </div>
     </main>
     <footer>
-        <div class="container">
+        <div class="container flex">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis modi, rem id eligendi, quia nam sunt officiis mollitia, impedit ad labore eius consequatur vitae suscipit amet ab illo quas itaque?</p>
             <a href="#">Lorem</a><span>Lorem, ipsum dolor.<a href="#">boolean</a>
             </span>
