added planning and testimonials

--- a/index.html
+++ b/index.html
@@ -79,23 +79,37 @@
                 <section class="plannings violet-bg">
                     <div class="container flex">
                         <div class="left-planning planning">
-                            Lorem, ipsum dolor.
+                            <img src="./css/img/planning1.png" alt="Woman with laptop">
+                            <h3>Strategic Planning</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae fugiat esse est sint, tempora suscipit repellat similique dolores fuga unde. Sit iste, natus ipsam quas, quaerat odit illo nam corporis iure obcaecati, recusandae eum.</p>
                         </div>
                         <div class="right-planning planning">
-                            Lorem, ipsum dolor.
+                            <img src="./css/img/planning2.png" alt="Man with laptop">
+                            <h3>App Developement</h3>
+                            <p>Develop an on-demand app for your delivery business to reach your targated customers without any interruption.</p>
+                            <i class="fa-solid fa-arrow-down violet-bg"></i>
                         </div>
                     </div>
                 </section>
                 <section class="testimonials">
                     <div class="container flex">
+                        <p>Testimonials</p>
+                        <h3>We are committed expert partners</h3>
+                        <p>We place huge value on strong relationships and have seen the benefit they bring to our business. Customer feedback is vital in helping us to get it right.</p>
                         <div class="testimonial violet-bg">
-                            Lorem, ipsum dolor.
+                            <div class="img-radius reynolds"></div>
+                            <p><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem commodi odit natus aliquam hic repellat quibusdam, voluptas quaerat, accusamus illo nobis ab!<i class="fa-solid fa-quote-right"></i></p>
+                            <p>nat reynolds</p>
                         </div>
                         <div class="testimonial violet-bg">
-                            Lorem, ipsum dolor.
+                            <div class="img-radius almeda"></div>
+                            <p><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem commodi odit natus aliquam hic repellat quibusdam, voluptas quaerat, accusamus illo nobis ab!<i class="fa-solid fa-quote-right"></i></p>
+                            <p>celia almeda</p>
                         </div>
                         <div class="testimonial violet-bg">
-                            Lorem, ipsum dolor.
+                            <div class="img-radius roberts"></div>
+                            <p><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem commodi odit natus aliquam hic repellat quibusdam, voluptas quaerat, accusamus illo nobis ab!<i class="fa-solid fa-quote-right"></i></p>
+                            <p>bob roberts</p>
                         </div>
                     </div>
                 </section>
