added about us section

--- a/index.html
+++ b/index.html
@@ -97,52 +97,89 @@
                         <h3>We are committed expert partners</h3>
                         <p>We place huge value on strong relationships and have seen the benefit they bring to our business. Customer feedback is vital in helping us to get it right.</p>
                         <div class="testimonial violet-bg">
-                            <div class="img-radius reynolds"></div>
-                            <p><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem commodi odit natus aliquam hic repellat quibusdam, voluptas quaerat, accusamus illo nobis ab!<i class="fa-solid fa-quote-right"></i></p>
-                            <p>nat reynolds</p>
+                            <figure>
+                                <img src="./css/img/testimonial1.jpg" alt="Man without beard">
+                            </figure>
+                            <div class="testimonial-description">
+                                <p><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem commodi odit natus aliquam hic repellat quibusdam, voluptas quaerat, accusamus illo nobis ab!<i class="fa-solid fa-quote-right"></i></p>
+                                <p>nat reynolds</p>
+                            </div>
                         </div>
                         <div class="testimonial violet-bg">
-                            <div class="img-radius almeda"></div>
-                            <p><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem commodi odit natus aliquam hic repellat quibusdam, voluptas quaerat, accusamus illo nobis ab!<i class="fa-solid fa-quote-right"></i></p>
-                            <p>celia almeda</p>
+                                <figure>
+                                    <img src="./css/img/testimonial2.jpg" alt="Man without beard">
+                                </figure>
+                                <div class="testimonial-description">
+                                    <p><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem commodi odit natus aliquam hic repellat quibusdam, voluptas quaerat, accusamus illo nobis ab!<i class="fa-solid fa-quote-right"></i></p>
+                                    <p>celia almeda</p>
+                                </div>
                         </div>
                         <div class="testimonial violet-bg">
-                            <div class="img-radius roberts"></div>
-                            <p><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem commodi odit natus aliquam hic repellat quibusdam, voluptas quaerat, accusamus illo nobis ab!<i class="fa-solid fa-quote-right"></i></p>
-                            <p>bob roberts</p>
+                                <figure>
+                                    <img src="./css/img/testimonial3.jpg" alt="Man without beard">
+                                </figure>
+                                <div class="testimonial-description">
+                                    <p><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem commodi odit natus aliquam hic repellat quibusdam, voluptas quaerat, accusamus illo nobis ab!<i class="fa-solid fa-quote-right"></i></p>
+                                    <p>bob roberts</p>
+                                </div>
                         </div>
                     </div>
                 </section>
                 <section class="benefits violet-bg">
-                    <div class="container flex">
-                        <div class="benefit-card">
-                            Lorem ipsum dolor sit amet.
-                        </div>
-                        <div class="benefit-card">
-                            Lorem ipsum dolor sit amet.
-                        </div>                
-                        <div class="benefit-card">
-                            Lorem ipsum dolor sit amet.
-                        </div>
-                        <div class="benefit-card">
-                            Lorem ipsum dolor sit amet.
-                        </div>
-                        <div class="benefit-card">
-                            Lorem ipsum dolor sit amet.
-                        </div>
-                        <div class="benefit-card">
-                            Lorem ipsum dolor sit amet.
+                    <div class="container">
+                        <h3>Benefits of working with us</h3>
+                        <div class="flex">
+                            <div class="benefit-card">
+                                <h2>01</h2>
+                                <h5>High Quality</h5>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit adipisci qui ipsum nostrum dolor inventore molestias mollitia nisi aperiam a rem vitae praesentium, tenetur ex?</p>
+                                <button class="violet-bg button">more</button>
+                            </div>
+                            <div class="benefit-card">
+                                <h2>02</h2>
+                                <h5>Creative Team</h5>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit adipisci qui ipsum nostrum dolor inventore molestias mollitia nisi aperiam a rem vitae praesentium, tenetur ex?</p>
+                                <button class="violet-bg button">more</button>
+                            </div>                
+                            <div class="benefit-card">
+                                <h2>03</h2>
+                                <h5>Amazing Results</h5>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit adipisci qui ipsum nostrum dolor inventore molestias mollitia nisi aperiam a rem vitae praesentium, tenetur ex?</p>
+                                <button class="violet-bg button">more</button>
+                            </div>
+                            <div class="benefit-card">
+                                <h2>04</h2>
+                                <h5>Best pricing</h5>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit adipisci qui ipsum nostrum dolor inventore molestias mollitia nisi aperiam a rem vitae praesentium, tenetur ex?</p>
+                                <button class="violet-bg button">more</button>
+                            </div>
+                            <div class="benefit-card">
+                                <h2>05</h2>
+                                <h5>Innovations</h5>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit adipisci qui ipsum nostrum dolor inventore molestias mollitia nisi aperiam a rem vitae praesentium, tenetur ex?</p>
+                                <button class="violet-bg button">more</button>
+                            </div>
+                            <div class="benefit-card">
+                                <h2>01</h2>
+                                <h5>24/7 Support</h5>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit adipisci qui ipsum nostrum dolor inventore molestias mollitia nisi aperiam a rem vitae praesentium, tenetur ex?</p>
+                                <button class="violet-bg button">more</button>
+                            </div>
                         </div>
                     </div>
                 </section>
                 <section class="about-us">
                     <div class="container flex">
                         <div class="about-title">
-                            <h2>title</h2>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae culpa beatae officiis ipsum omnis libero mollitia modi error, alias aperiam eaque saepe nulla quod cum quis deserunt recusandae nemo fugiat!</p>
+                            <h2>About Us</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis at quae iste iusto obcaecati ipsum deleniti hic perferendis accusamus earum nostrum, eius autem dolorem eos quos voluptatem sed, ipsam sunt? Totam quasi exercitationem obcaecati iusto neque velit et perferendis atque, aspernatur quae mollitia dolorum placeat laboriosam quidem molestias soluta provident adipisci corrupti corporis beatae suscipit labore!</p>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis obcaecati, quam laboriosam expedita totam eum quos, aut minima veniam officia ut rem ea aperiam quaerat corrupti vel eveniet unde temporibus eligendi maxime exercitationem! Dignissimos consequatur incidunt, voluptas ea quisquam ipsa et provident vitae, necessitatibus modi sunt? Enim suscipit tempora a laborum?</p>
                         </div>
                         <div class="about-img">
-                            <p>img</p>
+                            <figure>
+                                <img src="./css/img/about.jpg" alt="Man without beard">
+                                <i class="fa-solid fa-quote-left"></i>
+                            </figure>
                             <h5>title</h5>
                             <button>findme</button>
                         </div>
