--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         <main>
                 <section class="cards">
                     <div class="container flex">
-                        <div class="card principal  ">
+                        <div class="card principal">
                             <div class="principal-button">
                                 <h4>Get a demo application</h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo ullam pariatur architecto debitis eos adipisci atque harum cupiditate aliquid.</p>
-                                <button class="blue-button"><i class="fa-brands fa-apple"></i> App Store</button>
+                                <button class="blue-button button"><i class="fa-brands fa-apple"></i> App Store</button>
                             </div>
                             <img src="./css/img/phone.png" alt="iPhone best deals">
                         </div>
@@ -96,7 +96,7 @@
                         <p>Testimonials</p>
                         <h3>We are committed expert partners</h3>
                         <p>We place huge value on strong relationships and have seen the benefit they bring to our business. Customer feedback is vital in helping us to get it right.</p>
-                        <div class="testimonial violet-bg">
+                        <div class="testimonial flex violet-bg">
                             <figure>
                                 <img src="./css/img/testimonial1.jpg" alt="Man without beard">
                             </figure>
@@ -105,7 +105,7 @@
                                 <p>nat reynolds</p>
                             </div>
                         </div>
-                        <div class="testimonial violet-bg">
+                        <div class="testimonial flex violet-bg">
                                 <figure>
                                     <img src="./css/img/testimonial2.jpg" alt="Man without beard">
                                 </figure>
@@ -114,7 +114,7 @@
                                     <p>celia almeda</p>
                                 </div>
                         </div>
-                        <div class="testimonial violet-bg">
+                        <div class="testimonial flex violet-bg">
                                 <figure>
                                     <img src="./css/img/testimonial3.jpg" alt="Man without beard">
                                 </figure>
@@ -178,29 +178,28 @@
                         <div class="about-img">
                             <figure>
                                 <img src="./css/img/about.jpg" alt="Man without beard">
-                                <i class="fa-solid fa-quote-left"></i>
                             </figure>
-                            <h5>title</h5>
-                            <button>findme</button>
+                            <i class="fa-solid fa-quote-left"></i>
+                            <h4>I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio.</h4>
+                            <button class="button violet-bg"><i class="fa-brands fa-linkedin fa-l"></i> Find me on linkedin</button>
                         </div>
                     </div>
                 </section>
                 <section class="started violet-bg">
                     <div class="container">
-                        <p>get start</p>
-                        <h5>Simple</h5>
-                        <h1>free!</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis provident nostrum distinctio suscipit adipisci ex accusamus placeat, fugit et aperiam est, laudantium similique ipsam necessitatibus eaque voluptates deserunt, dolor laboriosam.</p>
-                        <button>getstart</button>
-                        <p class="copyright">copyright</p>
+                        <p>GET STARTED</p>
+                        <h4>Simple, Transparent Pricing </h4>
+                        <h1>It's Free!</h1>
+                        <p>We're still in beta and we will be for awhille. As we add more functionality, we'll look into other plans with more controls.</p>
+                        <button class="button">Get started</button>
+                        <p class="copyright">Copyright 2021 Boolean &#183; Classe LXXXI &#183; <a href="#">Privacy policy</a></p>
                     </div>
                 </section>
         </main>
         <footer>
             <div class="container">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis modi, rem id eligendi, quia nam sunt officiis mollitia, impedit ad labore eius consequatur vitae suscipit amet ab illo quas itaque?</p>
-                <a href="#">Lorem</a><span>Lorem, ipsum dolor.<a href="#">boolean</a>
-                </span>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi maiores minima vitae vero nulla pariatur impedit!</p>
+                <a href="#">Lorem ipsum</a><span>scelerisque mauris pellentesque</span><a href="#">Boolean careers</a>
             </div>
         </footer>
     </body>
