fixed principal card img

--- a/index.html
+++ b/index.html
@@ -176,10 +176,12 @@
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis obcaecati, quam laboriosam expedita totam eum quos, aut minima veniam officia ut rem ea aperiam quaerat corrupti vel eveniet unde temporibus eligendi maxime exercitationem! Dignissimos consequatur incidunt, voluptas ea quisquam ipsa et provident vitae, necessitatibus modi sunt? Enim suscipit tempora a laborum?</p>
                         </div>
                         <div class="about-img">
-                            <figure>
-                                <img src="./css/img/about.jpg" alt="Man without beard">
-                            </figure>
-                            <i class="fa-solid fa-quote-left"></i>
+                            <div class="quote-icon">
+                                <figure>
+                                    <img src="./css/img/about.jpg" alt="Man without beard">
+                                </figure>
+                                <i class="fa-solid fa-quote-left"></i>
+                            </div>
                             <h4>I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio.</h4>
                             <button class="button violet-bg"><i class="fa-brands fa-linkedin fa-l"></i> Find me on linkedin</button>
                         </div>
