--- a/index.html
+++ b/index.html
@@ -38,7 +38,16 @@
                                 <a href="#" class="button">Get Started</a>
                             </li>
                         </ul>
-                        <i class="fa-solid fa-bars fa-2x"></i>
+                        <div class="navbar-menu">
+                            <button class="menu-button"><i class="fa-solid fa-bars fa-2x"></i></button>
+                            <div class="navbar-item">
+                                <a href="#">Planning</a>
+                                <a href="#">Testimonials</a>
+                                <a href="#">Features</a>
+                                <a href="#">About Us</a>
+                                <a href="#">Get Started</a>
+                            </div>
+                        </div>
                     </nav>
                 </section>
             </div>
